fixed Statistics